tests/NormalTests/paczka1/fuzzy1/11760336.err
Error in line 1: 3tCrTO A49 77,1
Error in line 7: r9yjNcCfm9m S729 11,8
Error in line 3: smbaY S729 100,0
Error in line 13: smbaY A241 92,7
Error in line 18: RGa A241 62,1
Error in line 20: A827 S729 67,6
